# AutoGrader

./: .gitignore  README.md  app.py  pyproject.toml
data/rules/: criteria.txt
data/submissions_raw/: 20241001_김철수.py  20241002_이영희.py  20241003_박민수.py  20241004_최지수.py  20241005_정호.py
scripts/: run.sh  setup_data.py
src/solar_grader/: __init__.py  __main__.py  config.py  grader.py  logger.py  parser.py  utils.py
